<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.about"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="@color/blue_prim_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include android:id="@+id/action_bar2"
            layout="@layout/actionbar2">
        </include>

        <TextView
            android:id="@+id/t1_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_bar2"
            android:text="@string/title_about1"
            android:textSize="@dimen/t1_size"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/v_margin_text">
        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/t1_about"
            android:background="@color/blue_prim"
            cardview:cardCornerRadius="@dimen/corner_radius_cv"
            android:layout_marginVertical="@dimen/v_margin_text"
            android:layout_marginHorizontal="@dimen/h_margin_text">

            <TextView
                android:id="@+id/p1_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sobre_petagram"
                android:background="@color/blue_prim">
            </TextView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/t2_about"
            android:layout_below="@+id/cv_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_about2"
            android:textSize="@dimen/t1_size"
            android:textStyle="bold">
        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/t2_about"
            android:background="@color/blue_prim"
            cardview:cardCornerRadius="@dimen/corner_radius_cv"
            android:layout_marginVertical="@dimen/v_margin_text"
            android:layout_marginHorizontal="@dimen/h_margin_text">

            <TextView
                android:id="@+id/p2_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sobre_dev"
                android:background="@color/blue_prim">
            </TextView>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>